# leansec-claude-code-boilerplate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  setup.sh
.claude/: settings.json  tasks.md
.github/workflows/: ci.yaml
claude-project/: project-yaml-schema.md  seed-document-template.md  system-instruction.md
claude-project/examples/: baseline-assessment.yaml
csflite/: controls.json  scoring.md
